# sd-scripts

./: .gitignore  .gitmodules  .readthedocs.yaml  Kohya Trainer XL Runpod.ipynb  Makefile  README-ja.md  README.md  _typos.toml  accel_sdxl_gen_img.py  accel_sdxl_gen_img_v2.py  anima_minimal_inference.py  anima_train.py  anima_train_network.py  benchmark_cdc_shape_cache.py  cache_dataset_meta.py  cogview4_train_network.py  config_README-ja.md  demo.md  fine_tune.py  flux_data_config.toml  flux_minimal_inference.py  flux_train.py  flux_train_control_net.py  flux_train_network.py  gen_img.py  gen_img_diffusers.py  hunyuan_image_minimal_inference.py  hunyuan_image_train_network.py  hunyuan_requirements.txt  hunyuan_test.py  hunyuan_test_ft.py  hunyuan_test_lora.py  hunyuan_train.py  hunyuan_train_network.py  lora.toml  lumina_minimal_inference.py  lumina_train.py  lumina_train_network.py  notes  pixart_train_network.py  (+34 more)
.github/: PULL_REQUEST_TEMPLATE.md
bitsandbytes_windows/: cextension.py  main.py
docs/: anima_train_network.md  config_README-en.md  config_README-ja.md  config_README-zh.md  config_README.md  fine_tune_README-en.md  fine_tune_README_zh.md  flux_train_network.md  gen_img_README-en.md  gen_img_README-ja.md  gen_img_README-zh.md  gen_img_README.md  hunyuan_image_train_network.md  lumina_train_network.md  masked_loss_README-ja.md  model_conversion-README-en.md  sd3_train_network.md  sdxl_lora_te_options-ja.md  sdxl_train_network.md  sdxl_train_network_advanced.md  skip_grad_norm_README-ja.md  train_README-en.md  train_README-ja.md  train_README-zh.md  train_db_README-en.md  train_network.md  train_network_README-en.md  train_network_README-ja.md  train_network_README-zh.md  train_network_advanced.md  train_textual_inversion.md  train_ti_README-en.md  train_ti_README-zh.md  wd14_tagger_README-en.md  wd14_tagger_README-ja.md  wd14_tagger_README-zh.md
finetune/: caption_images_by_florence2.py  clean_captions_and_tags.py  hypernetwork_nai.py  make_captions.py  make_captions_by_git.py  make_captions_by_ofa.py  merge_all_to_metadata.py  merge_captions_to_metadata.py  merge_dd_tags_to_metadata.py  merge_jsons.py  multi_gpu_prepare.sh  prepare_buckets_latents.py  prepare_buckets_latents_separate.py  tag_images_by_wd14_tagger.py  tagger_utils.py
log_dashboard/: make_dashboard.py
networks/: check_lora_weights.py  control_net_lllite.py  control_net_lllite_for_train.py  convert_anima_lora_to_comfy.py  convert_flux_lora.py  convert_hunyuan_image_lora_to_comfy.py  dylora.py  extract_lora_from_dylora.py  extract_lora_from_models.py  flux_extract_lora.py  flux_merge_lora.py  loha.py  lokr.py  lora.py  lora_anima.py  lora_diffusers.py  lora_fa.py  lora_flux.py  lora_hunyuan_image.py  lora_interrogator.py  lora_lumina.py  lora_sd3.py  lori_D.py  merge_lora.py  merge_lora_old.py  network_base.py  oft.py  resize_lora.py  sdxl_merge_lora.py  svd_merge_lora.py
tests/: README.md  (+8 more)
(+107 files in other folders)
