[project]
name = "sd-scripts"
version = "0.1.0"
description = "Training, generation and utility scripts for Stable Diffusion."
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "accelerate==0.33.0",
    "altair==4.2.2",
    "bitsandbytes==0.44.0",
    "diffusers[torch]==0.25.0",
    "easygui==0.98.3",
    "einops==0.7.0",
    "ftfy==6.1.1",
    "huggingface-hub==0.24.5",
    "imagesize==1.4.1",
    "lion-pytorch==0.0.6",
    "opencv-python==4.8.1.78",
    "prodigyopt==1.0",
    "pytorch-lightning==1.9.0",
    "rich==13.7.0",
    "safetensors==0.4.4",
    "schedulefree==1.4",
    "sentencepiece==0.2.0",
    "tensorboard>=2.18.0",
    "toml==0.10.2",
    "transformers==4.44.0",
    "voluptuous==0.13.1",
]

[tool.black]
line-length = 132

